5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4179/executions/1715_3041.log
== TEST (2019-05-02 16:30:13) 
-- CODE:
x=float(input("Qual o valor de x?: "))
if (x == 2 or x == -2):
	print("entrada invalida")
elif (x > 2 and x <= 1000):
	print(round((1/x-2),4))
-- OUTPUT:
46.66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:32:28) 
-- CODE:
x=float(input("Qual o valor de x?: "))
if (x == 2 or x == -2):
	print("entrada invalida")
elif (x > 2 and x <= 1000):
	print(round((1/x-2),4))
elif (x >= -1000 or x < -2):
	print(round(-(1/x-2),4))
-- OUTPUT:
2.001
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:32:48) 
-- CODE:
x=float(input("Qual o valor de x?: "))
if (x == 2 or x == -2):
	print("entrada invalida")
elif (x > 2 and x <= 1000):
	print(round((1/x-2),4))
elif (x >= -1000 or x < -2):
	print(round(-1/x-2),4)
-- OUTPUT:
-2 4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:33:05) 
-- CODE:
x=float(input("Qual o valor de x?: "))
if (x == 2 or x == -2):
	print("entrada invalida")
elif (x > 2 and x <= 1000):
	print(round((1/x-2),4))
elif (x >= -1000 or x < -2):
	print(round((-1/x-2),4))
-- OUTPUT:
-1.999
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:33:24) 
-- CODE:
x=float(input("Qual o valor de x?: "))
if (x == 2 or x == -2):
	print("entrada invalida")
elif (x > 2 and x <= 1000):
	print(round((1/x-2),4))
elif (x >= -1000 or x < -2):
	
-- ERROR:
File "XXXX", line 8
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:33:33) 
-- CODE:
x=float(input("Qual o valor de x?: "))
if (x == 2 or x == -2):
	print("entrada invalida")
elif (x > 2 and x <= 1000):
	print(round((1/x-2),4))
elif (x >= -1000 or x < -2):
-- ERROR:
File "XXXX", line 7
    
                                ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:34:35) 
-- CODE:
x=float(input("Qual o valor de x?: "))
if (x == 2 or x == -2):
	print("entrada invalida")
elif (x > 2 and x <= 1000):
	print(round((1/x-2),4))
elif (x >= -1000 or x < -2):
	print(round((-1/x+2),4))
-- OUTPUT:
2.001
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:35:08) 
-- CODE:
x=float(input("Qual o valor de x?: "))
if (x == 2 or x == -2):
	print("entrada invalida")
elif (x > 2 and x <= 1000):
	print(round((1/x-2),4))
elif (x >= -1000 or x < -2):
	print(round((-1/x+2),4))
-- OUTPUT:
2.001
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:35:12) 
-- CODE:
x=float(input("Qual o valor de x?: "))
if (x == 2 or x == -2):
	print("entrada invalida")
elif (x > 2 and x <= 1000):
	print(round((1/x-2),4))
elif (x >= -1000 or x < -2):
	print(round((-1/x+2),4))
-- OUTPUT:
2.001
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:35:19) 
-- CODE:
x=float(input("Qual o valor de x?: "))
if (x == 2 or x == -2):
	print("entrada invalida")
elif (x > 2 and x <= 1000):
	print(round((1/x-2),4))
elif (x >= -1000 or x < -2):
	print(round((-1/x+2),4))
-- OUTPUT:
2.001
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:36:58) 
-- CODE:
x=float(input("Qual o valor de x?: "))
if (x == 2 or x == -2):
	print("entrada invalida")
elif (x > 2 and x <= 1000):
	print(round(1/x-2,4))
elif (x >= -1000 or x < -2):
	print(round((-1/x+2),4))
-- OUTPUT:
2.001
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:38:05) 
-- CODE:
x=float(input("Qual o valor de x?: "))
if (x == 2 or x == -2):
	print("entrada invalida")
elif (x > 2 and x <= 1000):
	print(1/(x-2))
elif (x >= -1000 or x < -2):
	print(round((-1/x+2),4))
-- OUTPUT:
2.001
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:38:32) 
-- CODE:
x=float(input("Qual o valor de x?: "))
if (x == 2 or x == -2):
	print("entrada invalida")
elif (x > 2 and x <= 1000):
	print(round(1/(x-2),4))
elif (x >= -1000 or x < -2):
	print(round((-1/x+2),4))
-- OUTPUT:
2.001
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:38:47) 
-- CODE:
x=float(input("Qual o valor de x?: "))
if (x == 2 or x == -2):
	print("entrada invalida")
elif (x > 2 and x <= 1000):
	print(round(1/(x-2),4))
elif (x >= -1000 or x < -2):
	print(round(-1/(x+2),4))
-- OUTPUT:
0.001
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:38:55) 
-- CODE:
x=float(input("Qual o valor de x?: "))
if (x == 2 or x == -2):
	print("entrada invalida")
elif (x > 2 and x <= 1000):
	print(round(1/(x-2),4))
elif (x >= -1000 or x < -2):
	print(round(-1/(x+2),4))
-- EXECUTION TIME:
0.1567
-- TEST CASE 1:
---- input:
-999.99
---- correct output:
0.001
---- user output:
0.001
-- TEST CASE 2:
---- input:
1.5
---- correct output:
entrada invalida
---- user output:
-0.2857
-- TEST CASE 3:
---- input:
-2.01
---- correct output:
100.0
---- user output:
100.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:40:11) 
-- CODE:
x=float(input("Qual o valor de x?: "))
if (x == 2 or x == -2):
	print("entrada invalida")
elif (x > 2 and x <= 1000):
	print(round(1/(x-2),4))
elif (x >= -1000 or x < -2):
	print(round(-1/(x+2),4))
-- OUTPUT:
0.001
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:40:24) 
-- CODE:
x=float(input("Qual o valor de x?: "))
if (x == 2 or x == -2):
	print("entrada invalida")
elif (x > 2 and x <= 1000):
	print(round(1/(x-2),4))
elif (x >= -1000 or x < -2):
	print(round(-1/(x+2),4))
-- EXECUTION TIME:
0.206976
-- TEST CASE 1:
---- input:
-999.99
---- correct output:
0.001
---- user output:
0.001
-- TEST CASE 2:
---- input:
1.5
---- correct output:
entrada invalida
---- user output:
-0.2857
-- TEST CASE 3:
---- input:
-2.01
---- correct output:
100.0
---- user output:
100.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:40:52) 
-- CODE:
x=float(input("Qual o valor de x?: "))
if (x == 2 or x == -2):
	print("entrada invalida")
elif (x > 2 and x <= 1000):
	print(round(1/(x-2),4))
elif (x >= -1000 or x < -2):
	print(round(-1/(x+2),4))
-- OUTPUT:
0.001
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:41:21) 
-- CODE:
x=float(input("Qual o valor de x?: "))
if (x == 2 or x == -2):
	print("entrada invalida")
elif (x > 2 and x <= 1000):
	print(round(1/(x-2),4))
elif (x >= -1000 or x < -2):
	print(round(-1/(x+2),4))
-- OUTPUT:
0.001
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:42:01) 
-- CODE:
x=float(input("Qual o valor de x?: "))
if (x == 2 or x == -2):
	print("entrada invalida")
elif (x > 2 and x <= 1000):
	print(round(1/(x-2),4))
elif (x >= -1000 or x < -2):
	print(round(-1/(x+2),4))
-- OUTPUT:
0.001
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:42:26) 
-- CODE:
x=float(input("Qual o valor de x?: "))
if (x == 2 or x == -2):
	print("entrada invalida")
elif (x > 2 and x <= 1000):
	print(round(1/(x-2),4))
elif (x <= -1000 or x < -2):
	print(round(-1/(x+2),4))
-- OUTPUT:
0.001
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:42:45) 
-- CODE:
x=float(input("Qual o valor de x?: "))
if (x == 2 or x == -2):
	print("entrada invalida")
elif (x > 2 and x <= 1000):
	print(round(1/(x-2),4))
elif (x >= -1000 and x < -2):
	print(round(-1/(x+2),4))
-- OUTPUT:
0.001
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:43:31) 
-- CODE:
x=float(input("Qual o valor de x?: "))
if (x == 2 or x == -2 or x > -1000 or x < 1000):
	print("entrada invalida")
elif (x > 2 and x <= 1000):
	print(round(1/(x-2),4))
elif (x >= -1000 and x < -2):
	print(round(-1/(x+2),4))
-- OUTPUT:
entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:43:37) 
-- CODE:
x=float(input("Qual o valor de x?: "))
if (x == 2 or x == -2 or x > -1000 or x < 1000):
	print("entrada invalida")
elif (x > 2 and x <= 1000):
	print(round(1/(x-2),4))
elif (x >= -1000 and x < -2):
	print(round(-1/(x+2),4))
-- OUTPUT:
entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:43:42) 
-- CODE:
x=float(input("Qual o valor de x?: "))
if (x == 2 or x == -2 or x > -1000 or x < 1000):
	print("entrada invalida")
elif (x > 2 and x <= 1000):
	print(round(1/(x-2),4))
elif (x >= -1000 and x < -2):
	print(round(-1/(x+2),4))
-- OUTPUT:
entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:44:09) 
-- CODE:
x=float(input("Qual o valor de x?: "))
if (x == 2 or x == -2):
	print("entrada invalida")
elif (x > 2 and x <= 1000):
	print(round(1/(x-2),4))
elif (x >= -1000 and x < -2):
	print(round(-1/(x+2),4))
-- OUTPUT:
0.001
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:44:15) 
-- CODE:
x=float(input("Qual o valor de x?: "))
if (x == 2 or x == -2):
	print("entrada invalida")
elif (x > 2 and x <= 1000):
	print(round(1/(x-2),4))
elif (x >= -1000 and x < -2):
	print(round(-1/(x+2),4))
-- EXECUTION TIME:
0.160444
-- TEST CASE 1:
---- input:
-999.99
---- correct output:
0.001
---- user output:
0.001
-- TEST CASE 2:
---- input:
1.5
---- correct output:
entrada invalida
---- user output:

-- TEST CASE 3:
---- input:
-2.01
---- correct output:
100.0
---- user output:
100.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:44:23) 
-- CODE:
x=float(input("Qual o valor de x?: "))
if (x == 2 or x == -2):
	print("entrada invalida")
elif (x > 2 and x <= 1000):
	print(round(1/(x-2),4))
elif (x <= -1000 and x < -2):
	print(round(-1/(x+2),4))
-- OUTPUT:
0.001
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:44:40) 
-- CODE:
x=float(input("Qual o valor de x?: "))
if (x == 2 or x == -2 ):
	print("entrada invalida")
elif (x > 2 and x <= 1000):
	print(round(1/(x-2),4))
elif (x >= -1000 and x < -2):
	print(round(-1/(x+2),4))
-- OUTPUT:
0.001
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:45:26) 
-- CODE:
x=float(input("Qual o valor de x?: "))
if (x == 2 or x == -2):
	print("entrada invalida")
elif (x > 2 and x <= 1000):
	print(round(1/(x-2),4))
elif (x >= -1000 and x < -2):
	print(round(-1/(x+2),4))
-- OUTPUT:
0.001
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:45:31) 
-- CODE:
x=float(input("Qual o valor de x?: "))
if (x == 2 or x == -2):
	print("entrada invalida")
elif (x > 2 and x <= 1000):
	print(round(1/(x-2),4))
elif (x >= -1000 and x < -2):
	print(round(-1/(x+2),4))
-- EXECUTION TIME:
0.108608
-- TEST CASE 1:
---- input:
-999.99
---- correct output:
0.001
---- user output:
0.001
-- TEST CASE 2:
---- input:
1.5
---- correct output:
entrada invalida
---- user output:

-- TEST CASE 3:
---- input:
-2.01
---- correct output:
100.0
---- user output:
100.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:46:34) 
-- CODE:
x=float(input("Qual o valor de x?: "))
if (x == 2 or x == -2 or x > 1000 or x < -1000):
	print("entrada invalida")
elif (x > 2 and x <= 1000):
	print(round(1/(x-2),4))
elif (x >= -1000 and x < -2):
	print(round(-1/(x+2),4))
-- OUTPUT:
0.001
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:46:40) 
-- CODE:
x=float(input("Qual o valor de x?: "))
if (x == 2 or x == -2 or x > 1000 or x < -1000):
	print("entrada invalida")
elif (x > 2 and x <= 1000):
	print(round(1/(x-2),4))
elif (x >= -1000 and x < -2):
	print(round(-1/(x+2),4))
-- EXECUTION TIME:
0.142504
-- TEST CASE 1:
---- input:
-999.99
---- correct output:
0.001
---- user output:
0.001
-- TEST CASE 2:
---- input:
1.5
---- correct output:
entrada invalida
---- user output:

-- TEST CASE 3:
---- input:
-2.01
---- correct output:
100.0
---- user output:
100.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:47:14) 
-- CODE:
x=float(input("Qual o valor de x?: "))
if (x == 2 or x == -2 or x > 1000 or x < -1000):
	print("entrada invalida")
elif (x > 2 and x <= 1000):
	print(round(1/(x-2),4))
elif (x >= -1000 and x < -2):
	print(round(-1/(x+2),4))
-- OUTPUT:
0.001
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:47:22) 
-- CODE:
x=float(input("Qual o valor de x?: "))
if (x == 2 or x == -2 or x > 1000 or x < -1000):
	print("entrada invalida")
elif (x > 2 and x <= 1000):
	print(round(1/(x-2),4))
elif (x >= -1000 and x < -2):
	print(round(-1/(x+2),4))
-- OUTPUT:
0.001
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:47:29) 
-- CODE:
x=float(input("Qual o valor de x?: "))
if (x == 2 or x == -2 or x > 1000 or x < -1000):
	print("entrada invalida")
elif (x > 2 and x <= 1000):
	print(round(1/(x-2),4))
elif (x >= -1000 and x < -2):
	print(round(-1/(x+2),4))
-- EXECUTION TIME:
0.131654
-- TEST CASE 1:
---- input:
-999.99
---- correct output:
0.001
---- user output:
0.001
-- TEST CASE 2:
---- input:
1.5
---- correct output:
entrada invalida
---- user output:

-- TEST CASE 3:
---- input:
-2.01
---- correct output:
100.0
---- user output:
100.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:48:12) 
-- CODE:
x=float(input("Qual o valor de x?: "))
if (x == 2 or x == -2 or x > 1000 or x < -1000):
	print("entrada invalida")
elif (x > 2 and x <= 1000):
	print(round(1/(x-2),4))
elif (x <= -1000 and x > -2):
	print(round(-1/(x+2),4))
-- OUTPUT:
0.001
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:48:59) 
-- CODE:
x=float(input("Qual o valor de x?: "))
if (x == 2 or x == -2 or x > 1000 or x < -1000):
	print("entrada invalida")
elif (x > 2 and x <= 1000):
	print(round(1/(x-2),4))
elif (x >= -1000 and x < -2):
	print(round(-(1/(x+2)),4))
-- OUTPUT:
0.001
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:49:05) 
-- CODE:
x=float(input("Qual o valor de x?: "))
if (x == 2 or x == -2 or x > 1000 or x < -1000):
	print("entrada invalida")
elif (x > 2 and x <= 1000):
	print(round(1/(x-2),4))
elif (x >= -1000 and x < -2):
	print(round(-(1/(x+2)),4))
-- EXECUTION TIME:
0.120932
-- TEST CASE 1:
---- input:
-999.99
---- correct output:
0.001
---- user output:
0.001
-- TEST CASE 2:
---- input:
1.5
---- correct output:
entrada invalida
---- user output:

-- TEST CASE 3:
---- input:
-2.01
---- correct output:
100.0
---- user output:
100.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:49:51) 
-- CODE:
x=float(input("Qual o valor de x?: "))
if (x == 2 or x == -2 or x > 1000 or x < -1000):
	print("entrada invalida")
elif (x > 2 and x <= 1000):
	print(round(1/(x-2),4))
elif (x >= -1000 and x < -2):
	print(round(-1/(x+2),4))
-- OUTPUT:
0.001
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
